# AutoSim

./: .gitignore  AutoSim Plan.md  LICENSE  README.md  githubpush.md  pyproject.toml
config/: demo_custom.yaml  demo_falling_block.yaml  demo_linear.yaml  demo_pn_breakdown.yaml  demo_pn_cv.yaml  demo_pn_erfc.yaml  demo_pn_gaussian.yaml  demo_pn_graded.yaml  demo_pn_iv.yaml  demo_pn_optimize.yaml  demo_pn_pulse.yaml  demo_pn_recombination.yaml  demo_pn_si_bias_sweep.yaml  demo_pn_si_equilibrium.yaml  demo_pn_si_reverse_bias.yaml  demo_polynomial.yaml
docs/: LEGACY_INVENTORY.md  MIGRATION.md  MIGRATION_REPORT.md  architecture_v2.md  plugin_development.md
examples/projects/: demo_custom_v2.json  demo_falling_block_v2.json  demo_linear_v2.json  demo_pn_breakdown_v2.json  demo_pn_cv_v2.json  demo_pn_erfc_v2.json  demo_pn_gaussian_v2.json  demo_pn_graded_v2.json  demo_pn_iv_v2.json  demo_pn_optimize_v2.json  demo_pn_pulse_v2.json  demo_pn_recombination_v2.json  demo_pn_si_bias_sweep_v2.json  demo_pn_si_equilibrium_v2.json  demo_pn_si_reverse_bias_v2.json  demo_polynomial_v2.json  pn_si_stationary_v2.json
frontend/: .env.live  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/scripts/: check-page.mjs
frontend/src/: App.tsx  index.css  main.tsx
scripts/: gen_mock_data.py
src/autosim/: __init__.py  cli.py  schemas.py
tests/: test_drag_models.py  test_orchestrator.py  test_probes.py  test_simulator.py
tests/api/: test_adapters.py  test_api.py  test_benchmark_api.py  test_legacy_removed.py  test_project_api.py
tests/pn/: test_analytical.py  (+19 more)
(+229 files in other folders)
