[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosim"
version = "0.1.0"
description = "Agent-native physics simulation with structured probes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.0",
    "matplotlib>=3.8",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
optimize = ["optuna>=3.0"]

[project.scripts]
autosim = "autosim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
